--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -1,4 +1,83 @@
+* {
+    margin: 0;
+    padding: 0;
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.calculator {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(50px, 200px));
+    grid-template-rows: repeat(3, minmax(50px, auto));
+    grid-template-areas:
+    "display display"
+    "function operator"
+    "number operator";
+    border-color: black;
+    border: 2px;
+    width: 100%;
+    height: 100%;
+}
+
+.calculator > div {
+    background-color: black;
+}
+
+.numbers {
+    grid-area: number;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    justify-items: center;
+}
+
+#test {
+    grid-column: 1/3;
+    justify-self: stretch;
+    width: auto;
+    border-radius: 30px;
+}
+
+.function {
+    grid-area: function;
+}
+
+.operators {
+    grid-area: operator;
+}
+
+.display {
+    grid-area: display;
+    color: white;
+}
+
 .active {
     background-color: white;
     transition-duration: 0.1s;
 }
+
+.calculator button {
+    height: 4em;
+    width: 4em;
+    box-sizing: border-box;
+    text-align: center;
+    border-radius: 50%;
+    border-width: 0;
+}
+
+.calculator .function button {
+    background-color: rgb(175, 175, 175);
+}
+
+.calculator .numbers button {
+    background-color: grey;
+    color: white;
+
+}
+
+.calculator .operators button {
+    background-color: orange;
+    color: white;
+
+}
+
