--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -2,82 +2,122 @@
     margin: 0;
     padding: 0;
     background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Monospace, Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    /* just to center it vertically */
+    height: 100%;
+}
+
+.numbers button:active, .function button:active {
+    /* filter: brightness(1.5); */
+    background-color: rgb(199, 199, 199);
+}
+
+.operator:focus, .operator:active {
+    background-color: rgb(255, 198, 93);
+    color: black;
+    transition: .1s;
+}
+
+.operators .equals:active {
+    background-color: rgb(255, 198, 93);
+    color: white;
+    transition: .1s;
 }
 
 .calculator {
     display: grid;
-    grid-template-columns: repeat(2, minmax(50px, 200px));
-    grid-template-rows: repeat(3, minmax(50px, auto));
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1.2fr 1fr 4fr;
     grid-template-areas:
-    "display display"
-    "function operator"
-    "number operator";
-    border-color: black;
-    border: 2px;
-    width: 100%;
+    "display display display display"
+    "functions functions functions operators"
+    "numbers numbers numbers operators";
+    width: 375px;
+    height: 500px;
+    border: 10px solid rgb(71, 71, 71);
+    border-radius: 4px;
+}
+
+.wrapper *  {
+    background-color: black;
+    
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
 }
 
-.calculator > div {
-    background-color: black;
-}
-
 .numbers {
-    grid-area: number;
+    grid-area: numbers;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    justify-items: center;
 }
 
-#test {
-    grid-column: 1/3;
-    justify-self: stretch;
-    width: auto;
-    border-radius: 30px;
+#zero {
+    grid-column: 1 / span 2;
 }
 
-.function {
-    grid-area: function;
+button {
+    font-size: 3em;
+    margin: 1px;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 4px;
+    outline: none;
+
 }
 
 .operators {
-    grid-area: operator;
+    grid-area: operators;
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+
+}
+
+.function {
+    grid-area: functions;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: bl;
 }
 
 .display {
     grid-area: display;
+    justify-self: stretch;
+    align-self: center;
+    font-size: 4em;
+    background-color: black;
     color: white;
-}
-
-.active {
-    background-color: white;
-    transition-duration: 0.1s;
-}
-
-.calculator button {
-    height: 4em;
-    width: 4em;
     box-sizing: border-box;
-    text-align: center;
-    border-radius: 50%;
-    border-width: 0;
+    text-align: right;
+    padding-right: 20px;
 }
 
-.calculator .function button {
+.numbers button {
+    background-color: grey;
+
+}
+
+.function button {
     background-color: rgb(175, 175, 175);
 }
 
-.calculator .numbers button {
-    background-color: grey;
-    color: white;
-
-}
-
-.calculator .operators button {
+.operators button {
     background-color: orange;
     color: white;
-
 }
 
+@media (min-height: 700px) {
+    .wrapper {
+        display: block;
+        margin-top: 40px;
+        margin-left: 50px;
+    }
+}
