--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -10,8 +10,8 @@ html, body {
     height: 100%;
 }
 
+/* ugh had to remove for keyboard stuff
 .numbers button:active, .function button:active {
-    /* filter: brightness(1.5); */
     background-color: rgb(199, 199, 199);
 }
 
@@ -25,6 +25,12 @@ html, body {
     background-color: rgb(255, 198, 93);
     color: white;
     transition: .1s;
+} */
+
+.active {
+    background-color: white !important;
+    transition-duration: .1s;
+    color: black !important;
 }
 
 .calculator {
