--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -43,8 +43,11 @@ html, body {
     "numbers numbers numbers operators";
     width: 375px;
     height: 500px;
+    min-width: 375px;
+    min-height: 500px;
     border: 10px solid rgb(71, 71, 71);
     border-radius: 4px;
+    
 }
 
 .wrapper *  {
@@ -55,8 +58,11 @@ html, body {
 .wrapper {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100%;
+    align-items: flex-start;
+    align-content: center;
+    margin-top: 10px;
+    height: 100vh;
+    overflow: auto;
 }
 
 .numbers {
@@ -120,7 +126,7 @@ button {
     color: white;
 }
 
-@media (min-height: 700px) {
+@media only screen and (min-width: 475px) and (min-height: 600px) {
     .wrapper {
         display: block;
         margin-top: 40px;
